Bug 824926 Make relative font size change handle nested font size tags correctly r=ehsan